<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ashadujjaman.cregistration.ComplaintSubmitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <TextView
            android:id="@+id/informationToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Add Complain"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:padding="5dp"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complain_title"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/complainTitleEt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/complain_title_star"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="16sp"
                android:padding="10dp"
                android:autofillHints="full name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complain_description"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/complainDescEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="@string/complain_description_star"
                android:gravity="start"
                android:minHeight="100dp"
                android:maxHeight="140dp"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                android:padding="10dp"
                android:autofillHints="full name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complain_image"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/complainImageIv"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_style"
                android:padding="5dp"
                android:src="@drawable/ic_image_upload"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/round_back_primary"
        android:layout_marginTop="10dp" />

</RelativeLayout>