<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ashadujjaman.cregistration.ComplaintShowActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="User name"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:padding="5dp"
            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/complainTimeTv"
                android:padding="8dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jan 2 5:34 PM"/>

            <ImageView
                android:id="@+id/complainActionIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/complainTitleTv"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/complainTimeTv"
                android:maxLines="1"
                android:text="@string/complain_title"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/complainDescTv"
                android:padding="8dp"
                android:layout_below="@+id/complainTitleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/complain_description"/>

            <ImageView
                android:id="@+id/complainImageIv"
                android:layout_marginTop="15dp"
                android:src="@drawable/splash_photo"
                android:layout_below="@+id/complainDescTv"
                android:background="@drawable/round_back_dark_blue"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/callBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="25dp"
        android:src="@drawable/ic_call"
        android:background="@drawable/shap_round"
        android:padding="10dp"
        android:contentDescription="@string/app_name" />

</RelativeLayout>